<resources>
    <string name="app_name">asgm2</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_your_phone_number">Enter your phone number (without \"-\")</string>
    <string name="ic_number">IC Number</string>
    <string name="enter_your_ic_number">Enter your IC number (without \"-\")</string>
    <string name="email_address">Email Address</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="add_tenant">Add Tenant</string>
    <string name="announcement_image">Announcement Image</string>
    <string name="enter_content">Enter Content</string>
    <string name="post">Post</string>
    <string name="enter_title">Enter Title</string>
</resources>